--- a/arabi/about.html
+++ b/arabi/about.html
@@ -26,7 +26,7 @@
             <div class="col-xs-12">
                 <button class="menuButton" onclick="showMenu()">Menu</button>
                 <ul class="title" id="menuBar">
-                    <li class="link"> <a href="index.html">الصفحه الرئیسیه</a></li>
+                    <li class="link"> <a href="arabi.html">الصفحه الرئیسیه</a></li>
                     <li class="link"> <a href="contact.html">اتصال بنا</a></li>
                     <li class="activeLink"> <a href="about.html">عنا</a></li>
                     <li class="linkdrop"> <a href="#">اللغات</a>
