--- a/arabi/arabi.html
+++ b/arabi/arabi.html
@@ -26,13 +26,13 @@
             <div class="col-xs-12">
                 <button class="menuButton" onclick="showMenu()">Menu</button>
                 <ul class="title" id="menuBar">
-                    <li class="activeLink"> <a href="#">الصفحه الرئیسیه</a></li>
+                    <li class="activeLink"> <a href="#">الصفحه الرئيسية</a></li>
                     <li class="link"> <a href="contact.html">اتصال بنا</a></li>
                     <li class="link"> <a href="about.html">عنا</a></li>
                     <li class="linkdrop"> <a href="#">اللغات</a>
                         <div class="drop">
                             <a href="../german/german.html">Deutsch</a>
-                            <a href="../farsi/farsi.html">فارسی</a>
+                            <a href="../farsi/farsi.html">فارسي</a>
                             <a href="../index.html">english</a>
                         </div>
                     </li>
@@ -56,7 +56,7 @@
         <div class="row">
             <div class="explainText col-xs-12 col-md-6  col-lg-3">
                 <div class="ExplainPersian">
-                    <h2>ما هی سی بروکه؟</h2>
+                    <h2>ما هي سي بروكة</h2>
                     مجموعة من العديد من اللاجئين - دعت إلى مظاهرات في المدن الألمانية في يوليو
 2018.<span onclick="myReadMore()" id="hideMe">بیشتر بخوانید </span>
                     <span id="showMe"><span id="hideMeToo" onclick="myReadLess()"> کمتر</span>رتدى المتظاهرون بعض سترات النجاة البرتقالية وعشاق النجاة لرفع الوعي بعملية الإنقاذ والتظاهر
@@ -91,10 +91,10 @@
                     في تشرين الثاني / نوفمبر ، سنستخدم سترات النجاة ، وزورق الورق والورق للغوص في دائرة بینبرگ في
                     أورانج ، ولون الإنقاذ البحر! في أربع مدن ، نخطط لإجراءات وحشود فلاش
                     <ul class="termin" style="list-style-type: none;">
-                        <li>فی ۳ نومبر فی مرکز مدینه بینبرگ </li>
-                        <li>فی ۱۰ نومبر فی مدینه ودل</li>
-                        <li>فی ۱۷ دسمبر فی مدینه شنفلد</li>
-                        <li>فی ۲۴ دسمبر فی مدینه المسهورن</li>
+                        <li>في ۳ نومبر فی مرکز مدینه بینبرگ </li>
+                        <li>في ۱۰ نومبر فی مدینه ودل</li>
+                        <li>في ۱۷ دسمبر فی مدینه شنفلد</li>
+                        <li>في ۲۴ دسمبر فی مدینه المسهورن</li>
                     </ul>
                 </div>
             </div>
